// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</Link>
`;

exports[`2. tile b 1`] = `
<Link>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
    <Text>
      <Text>
        
        The 
        <Text>
          Duke of Edinburgh
        </Text>
         could be charged with driving without due care and attention after his car accident yesterday
        ...
      </Text>
    </Text>
  </View>
</Link>
`;

exports[`3. tile c 1`] = `
<Link>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
</Link>
`;

exports[`4. tile d 1`] = `
<Link>
  <View>
    <View>
      <Image
        aspectRatio={1.5}
        uri="https://img/someImage"
      />
    </View>
    <View>
      <View>
        <Text>
          ROYALS
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags
        flags={
          Array [
            "NEW",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`5. tile e 1`] = `
<Link>
  <View>
    <View>
      <Image
        aspectRatio={0.8}
        uri="http://image.io/4by5"
      />
    </View>
    <View>
      <View>
        <Text>
          ROYALS
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags
        flags={
          Array [
            "NEW",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`6. tile g 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Image
        aspectRatio={1}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`7. tile i 1`] = `
<View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
</View>
`;

exports[`8. tile j 1`] = `
<View>
  <View>
    <Image
      aspectRatio={1.5}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
</View>
`;
